# vehicle_telemetry

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
.github/workflows/: cmake-single-platform.yml
UML/: uml.txt
docs/: IsItOOP.md  code_review.md  notes.md  notes2.md  tasks.md
docs/helper_docs/: configs_suggestion.md  notes.md
logs/: alerts.txt  analysis.txt  debug.txt  info.txt
src/: battery.cpp  main.cpp  radar.cpp  sensor.cpp  sensor.hpp  speed.cpp  speed.hpp  temprature.cpp
src/classes/: battery.cpp  batteryLevel.cpp  batteryTemp.cpp  car.cpp  engineTemp.cpp  logger.cpp  radar.cpp  sensor.cpp  speed.cpp  temprature.cpp
src/classes/sensors/: batteryLevel.cpp  batteryTemp.cpp  engineTemp.cpp  radar.cpp  speed.cpp
src/headers/: battery.hpp  batteryLevel.hpp  batteryTemp.hpp  car.hpp  engineTemp.hpp  logger.hpp  radar.hpp  sensor.hpp  speed.hpp  temprature.hpp
